
	* libpoke/pkl-promo.c (promote_node): New function.
	(pkl_promo_ps_op_div): Use promote_node.
	(pkl_promo_ps_op_binary_intoffstrarr): Likewise.
	(pkl_promo_ps_op_bconc): Likewise.
	(pkl_promo_ps_op_mul): Likewise.
	(pkl_promo_ps_return_stmt): Likewise.
	(pkl_promo_ps_func_arg): Likewise.
	(pkl_promo_ps_print_stmt): Likewise.
	(pkl_promo_ps_funcall): Likewise.

2020-12-22  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Define poke_interactive_p in the compiler.
	* libpoke/pkl.c (pvm_type_to_ast_type): Fix integral types.
	* etc/poke.rec (Make poke_interactive_p available to Poke
	programs): Remove as done.

2020-12-22  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (Building after a git pull): New section.
	* HACKING: Regenerate.
	* DEV-NEWS: Add note.

2020-12-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.h (PVM_MAKE_INT): Define.
	(PVM_MAKE_UINT): Likewise.
	* libpoke/pvm-val.c (pvm_make_int): Use macro.
	(pvm_make_uint): Likewise.
	* libpoke/pvm.jitter: Use the macros instead of the functions.

2020-12-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk: Reduce the size of the hserver tokens table,
	since they now expire.

2020-12-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c: Define NO_HSERVER_ARG.
	(initialize): Honor poke_no_hserver_arg to initialize
	poke_hserver_p.
	(print_help): Help for --no-hserver.
	* poke/pk-cmd-ios.c (print_info_ios): Do not emit hyperlinks if
	the hserver is not enabled.
	* testsuite/lib/poke-dg.exp (poke-dg-test): Do not run the hserver
	when testing.
	* testsuite/lib/poke-pk.exp (tap_execute): Likewise.
	* testsuite/lib/poke.exp (poke_start): Likewise.
	* etc/poke.rec (Add command-line option to disable the hserver):
	Remove as done.

2020-12-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk (hserver_cur_token): Define.
	(hserver_get_token): Use a simpler schema to allocate tokens, and
	expire them if needed.
